# pyaot-compiler

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REFACTOR.md  CLAUDE.md  COMPILER_STATUS.md  CONVENTIONS.md  Cargo.toml  IMPLEMENTATION_REFERENCE.md  INSIGHTS.md  Makefile  PHASE2_S2_7_PLAN.md  PITFALLS.md  PLAN.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  test_examples.sh
bench/: BASELINE.md  COVERAGE.md  Cargo.toml  README.md
bench/benches/: pyaot_bench.rs
bench/py/: classes.py  closures.py  containers.py  exceptions.py  float_arith.py  gc_stress.py  generators.py  int_arith.py  polymorphic.py  startup.py  strings.py
bench/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  import_resolver.rs  import_resolver_tests.rs  lib.rs  main.rs  mir_merger.rs  module_discovery.rs  pipeline.rs  types.rs
crates/cli/tests/: differential.rs  input_stdin.rs  print_file.rs  runtime.rs  traceback.rs  traceback_chain.rs
crates/cli/tests/common/: mod.rs
crates/codegen-cranelift/: Cargo.toml
crates/codegen-cranelift/src/: context.rs  debug_info.rs  exceptions.rs  function.rs  gc.rs  instructions.rs  lib.rs  runtime_helpers.rs  terminators.rs  traceback.rs  utils.rs
crates/codegen-cranelift/src/instructions/: arithmetic.rs  calls.rs  conversions.rs  copy.rs  mod.rs  tag.rs
crates/codegen-cranelift/src/runtime_calls/: boxing.rs  bytes.rs  cells.rs  class_attrs.rs  compare.rs  conversions.rs  dict.rs  file.rs  generator.rs  globals.rs  hash.rs  instance.rs  iterator.rs  list.rs  math.rs  minmax.rs  mod.rs  object.rs  print.rs  set.rs  stdlib.rs  string.rs  tuple.rs
crates/core-defs/: Cargo.toml
crates/core-defs/src/: builtins.rs  elem_tags.rs  exceptions.rs  isinstance_kind.rs  layout.rs  lib.rs  runtime_func_def.rs  tag.rs  tag_kinds.rs  type_tags.rs  value.rs
crates/frontend-python/: Cargo.toml
crates/frontend-python/src/: ast_util.rs  freevars.rs  lib.rs  lower.rs  parser.rs
crates/frontend-python/src/ast_to_hir/: builtins.rs  classes.rs  comprehensions.rs  expressions.rs  fstrings.rs  functions.rs  lambdas.rs  mod.rs  operators.rs  types.rs  variables.rs
crates/frontend-python/src/lower/: annotations.rs  builder.rs  builtins.rs  calls.rs  classes.rs  closures.rs  comprehensions.rs  dataclass.rs  exceptions.rs  expressions.rs  generators.rs  mod.rs  patterns.rs  program.rs  statements.rs  stdlib.rs  synth_class.rs  tests.rs
crates/hir/: Cargo.toml
crates/hir/src/: cfg_build.rs  cfg_builder.rs  lib.rs  visit.rs
crates/lowering/: Cargo.toml
crates/lowering/src/: call_resolution.rs  class_metadata.rs  exceptions.rs  lambda_inference.rs  legalize.rs  lib.rs  narrowing.rs  runtime_selector.rs  tests.rs  type_dispatch.rs  type_inference.rs  utils.rs
crates/lowering/src/call_resolution/: arg_binding.rs  default_params.rs  mod.rs  varargs.rs
crates/lowering/src/context/: accessors.rs  cfg_walker.rs  constructors.rs  function_lowering.rs  helpers.rs  locals.rs  mod.rs
crates/lowering/src/expressions/: calls.rs  collections.rs  generator_intrinsics.rs  literals.rs  mod.rs  operators.rs  stdlib.rs
crates/lowering/src/generators/: creator.rs  desugaring.rs  for_loop.rs  mod.rs  resume.rs  utils.rs  vars.rs  while_loop.rs
crates/lowering/src/statements/: assert.rs  assign.rs  control_flow.rs  iter_protocol.rs  match_stmt.rs  mod.rs
crates/lowering/src/type_planning/: check.rs  closure_scan.rs  container_refine.rs  helpers.rs  infer.rs  lambda_inference.rs  local_prescan.rs  mod.rs  ni_analysis.rs  phase4_safe_scan.rs  pre_scan.rs  validate.rs
crates/mir/: Cargo.toml
crates/mir/src/: coerce.rs  cold.rs  core.rs  dom_tree.rs  instructions.rs  kinds.rs  lib.rs  liveness.rs  operands.rs  operators.rs  phi_normalize.rs  runtime_func.rs  ssa_check.rs  ssa_construct.rs  terminators.rs  types.rs  verify.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: abi_repair.rs  analysis.rs  call_graph.rs  constfold.rs  dce.rs  devirt.rs  inline.rs  lib.rs  pass.rs  peephole.rs  testutil.rs  type_inference.rs
crates/optimizer/src/box_fusion/: mod.rs  tests.rs
crates/optimizer/src/constfold/: fold.rs  mod.rs  propagate.rs  tests.rs
crates/optimizer/src/dce/: liveness.rs  mod.rs  reachability.rs  tests.rs
crates/optimizer/src/devirtualize/: mod.rs  tests.rs
crates/optimizer/src/flatten_properties/: mod.rs  tests.rs
crates/optimizer/src/inline/: analysis.rs  mod.rs  remap.rs  tests.rs  transform.rs
crates/optimizer/src/monomorphize/: clone.rs  derive.rs  devirt_indirect.rs  mod.rs
crates/optimizer/src/peephole/: mod.rs  patterns.rs  tests.rs
crates/optimizer/src/raw_demotion/: mod.rs  tests.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: abc.rs  base64_mod.rs  bigint.rs  boxing.rs  builtins.rs  bytearray.rs  bytes.rs  cell.rs  class_attrs.rs  collections.rs  conversions.rs  copy.rs  counter.rs  defaultdict.rs  deque.rs  dict.rs  exceptions.rs  file.rs  format.rs  frozenset.rs  functools.rs  gc.rs  generator.rs  globals.rs  hash.rs  hash_table_utils.rs  hashlib.rs  instance.rs  json.rs  lib.rs  math_ops.rs  minmax_utils.rs  object.rs  ops.rs  os.rs  print.rs  random.rs  re.rs  set.rs  slab.rs  (+14 more)
crates/runtime/src/bytes/: check.rs  convert.rs  core.rs  mod.rs  search.rs  transform.rs
crates/runtime/src/conversions/: ascii.rs  mod.rs  repr.rs  to_str.rs  type_cast.rs
crates/runtime/src/dict/: comparison.rs  core.rs  (+3 more)
crates/runtime/tools/: gen_codec_tables.py  gen_numeric_table.py  gen_unicode_tables.py
crates/semantics/: Cargo.toml
crates/semantics/src/: lib.rs  tests.rs
crates/stdlib-defs/: Cargo.toml
crates/stdlib-defs/src/: lib.rs  object_types.rs  registry.rs  types.rs
crates/typecheck/: Cargo.toml
crates/typecheck/src/: builtins.rs  calls.rs  context.rs  expressions.rs  lib.rs  methods.rs  operators.rs  statements.rs  tests.rs  unpacking.rs
crates/typeck/: Cargo.toml
crates/typeck/src/: intervals.rs  lib.rs  tests.rs
crates/types/: Cargo.toml
crates/types/src/: builtin_classes.rs  derive.rs  dunders.rs  exceptions.rs  lattice.rs  lib.rs  repr.rs  sem.rs  tag_kinds.rs  tests.rs  type_tags.rs
(+413 files in other folders)
