[workspace]
resolver = "2"
members = [
    # ── Frozen substrate + contract (copied verbatim from python-compiler-rust) ──
    "crates/core-defs",
    "crates/format-shared",
    "crates/utils",
    "crates/diagnostics",
    "crates/linker",
    "crates/stdlib-defs",
    "crates/runtime",

    # ── New compiler front-half (correct-by-construction; no dual type system) ──
    "crates/types",            # SemTy (semantic) + Repr (physical) — the two-layer split
    "crates/hir",              # CFG-only HIR, carries SemTy
    "crates/semantics",        # name resolution, scopes, MRO linearization
    "crates/typeck",           # ONE constraint-based inference (replaces type_planning/)
    "crates/mir",              # typed MIR, Repr MANDATORY (no Option), + verifier
    "crates/lowering",         # mechanical HIR→MIR + single repr-legalization point
    "crates/optimizer",        # passes over typed MIR (read Repr, never sentinels)
    "crates/codegen-cranelift",# typed MIR → Cranelift → object
    "crates/frontend-python",  # parser (rustpython) + desugaring → HIR
    "crates/cli",              # entry point, pipeline orchestration (binary `pyaot`)
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["n0madic", "claude"]
license = "MIT"

[workspace.dependencies]
# Parser
rustpython-parser = "0.4"

# Cranelift backend
cranelift-codegen = "0.127"
cranelift-frontend = "0.127"
cranelift-module = "0.127"
cranelift-object = "0.127"
cranelift-native = "0.127"
target-lexicon = "0.13"

# Debug info
gimli = { version = "0.33", default-features = false, features = ["write", "std"] }
object = { version = "0.37", default-features = false, features = ["write", "std", "elf", "macho"] }

# Diagnostics
miette = { version = "7", features = ["fancy"] }
thiserror = "1.0"

# Data structures
indexmap = "2.0"
hashbrown = "0.14"
smallvec = "1.11"
la-arena = "0.3"
slotmap = "1.0"

# Graphs
petgraph = "0.6"

# Utilities
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization (for IR dump)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 0
debug = true

# The runtime's `rt_*_abi` shims reinterpret tagged `Value`s as pointers via
# `Value::unwrap_ptr`, whose `debug_assert!(is_ptr())` is only correct under the
# release-like assumption the frozen ABI is designed for (a tagged fixnum is a
# legal `rt_obj_add` / `rt_print_obj` argument). Build the runtime — and
# `core-defs`, where the `#[inline]` `Value` shims and their `debug_assert!`s
# live — without debug-assertions in dev too, so the linked staticlib honors
# that contract. The front-half crates keep their assertions (incl. `mir::verify`).
# NB: a `[profile.dev.package.X]` override also propagates to the `test` profile,
# so these would silently compile OUT every `#[cfg(debug_assertions)]` test in
# `runtime` / `core-defs` under `cargo test`. The `[profile.test.package.*]`
# overrides below re-enable debug-assertions for those crates' own unit-test
# builds (only) so those tests actually run.
[profile.dev.package.pyaot-runtime]
debug-assertions = false
overflow-checks = false

# Re-enable debug-assertions for the runtime's OWN unit-test build only, so the
# defence-in-depth `debug_assert_type_tag!` seam guards (and the other
# `#[cfg(debug_assertions)]` runtime tests) actually compile in and fire under
# `cargo test -p pyaot-runtime`. The dev/release package override above keeps the
# staticlib `cli` links (and ships) with debug-assertions OFF, so the corpus
# differential and release binaries are unaffected — the guards stay compiled out
# there (verified: the cli corpus runtime is not rebuilt by this test override).
# `overflow-checks` stays off to preserve the runtime's wrapping/bignum contract.
[profile.test.package.pyaot-runtime]
debug-assertions = true
overflow-checks = false

[profile.dev.package.pyaot-core-defs]
debug-assertions = false
overflow-checks = false

# Same rationale as the runtime test override above: re-enable debug-assertions
# for core-defs' OWN unit-test build so its `#[cfg(debug_assertions)]` Value
# tests (int-overflow panic, wrong-tag `unwrap_int/bool/ptr` panics) actually
# run under `cargo test -p pyaot-core-defs`. Scoped to the test harness only —
# the inlined `Value` shims `runtime` links keep debug-assertions OFF via the
# block above, so the shipped staticlib/ABI contract is unchanged.
[profile.test.package.pyaot-core-defs]
debug-assertions = true
overflow-checks = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
