[package]
name = "pyaot-codegen-cranelift"
version.workspace = true
edition.workspace = true
description = "Typed MIR → Cranelift → object file"

[dependencies]
pyaot-core-defs = { path = "../core-defs" }
pyaot-utils = { path = "../utils" }
pyaot-types = { path = "../types" }
pyaot-mir = { path = "../mir" }
pyaot-diagnostics = { path = "../diagnostics" }
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-module = { workspace = true }
cranelift-object = { workspace = true }
cranelift-native = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
