[package]
name = "pyaot-frontend-python"
version.workspace = true
edition.workspace = true
description = "Python parsing + desugaring → HIR"

[dependencies]
pyaot-core-defs = { path = "../core-defs" }
pyaot-utils = { path = "../utils" }
pyaot-types = { path = "../types" }
pyaot-hir = { path = "../hir" }
pyaot-stdlib-defs = { path = "../stdlib-defs" }
pyaot-diagnostics = { path = "../diagnostics" }
rustpython-parser = { workspace = true }
la-arena = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
