[package]
name = "pyaot-lowering"
version.workspace = true
edition.workspace = true
description = "Mechanical HIR→MIR lowering + single representation-legalization point"

[dependencies]
pyaot-core-defs = { path = "../core-defs" }
pyaot-utils = { path = "../utils" }
pyaot-types = { path = "../types" }
pyaot-hir = { path = "../hir" }
pyaot-mir = { path = "../mir" }
pyaot-typeck = { path = "../typeck" }
pyaot-stdlib-defs = { path = "../stdlib-defs" }
pyaot-diagnostics = { path = "../diagnostics" }
la-arena = { workspace = true }

[dev-dependencies]
# Tests drive real Python through the front-half to assert lowered MIR shapes.
pyaot-frontend-python = { path = "../frontend-python" }
pyaot-semantics = { path = "../semantics" }

[lints.rust]
unsafe_code = "forbid"
