[package]
name = "pyaot-mir"
version.workspace = true
edition.workspace = true

[dependencies]
pyaot-utils = { path = "../utils" }
pyaot-types = { path = "../types" }
pyaot-core-defs = { path = "../core-defs" }
indexmap = { workspace = true }
smallvec = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
