[package]
name = "pyaot-optimizer"
version.workspace = true
edition.workspace = true

[dependencies]
pyaot-core-defs = { path = "../core-defs" }
pyaot-diagnostics = { path = "../diagnostics" }
pyaot-mir = { path = "../mir" }
pyaot-utils = { path = "../utils" }
pyaot-types = { path = "../types" }
indexmap = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
