[package]
name = "pyaot-optimizer"
version.workspace = true
edition.workspace = true
description = "MIR optimization passes over typed MIR"

[dependencies]
pyaot-core-defs = { path = "../core-defs" }
pyaot-utils = { path = "../utils" }
pyaot-types = { path = "../types" }
pyaot-mir = { path = "../mir" }

[lints.rust]
unsafe_code = "forbid"
