[package]
name = "pyaot-semantics"
version.workspace = true
edition.workspace = true
description = "Name resolution, scopes, and MRO linearization"

[dependencies]
pyaot-utils = { path = "../utils" }
pyaot-hir = { path = "../hir" }
pyaot-diagnostics = { path = "../diagnostics" }

[lints.rust]
unsafe_code = "forbid"
