[package]
name = "pyaot-types"
version.workspace = true
edition.workspace = true

[dependencies]
pyaot-core-defs = { path = "../core-defs" }
pyaot-stdlib-defs = { path = "../stdlib-defs" }
pyaot-utils = { path = "../utils" }
indexmap = { workspace = true }
smallvec = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
